[package]
name = "space-invaders"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "CanvasRenderingContext2d",
  "Window",
  "EventTarget",
  "Event",
  "KeyboardEvent",
]

[[bin]]
name = "gen-sprites"
path = "src/bin/gen_sprites.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3"
