[package]
name = "space-invaders"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "CanvasRenderingContext2d",
  "Window",
  "EventTarget",
  "Event",
  "KeyboardEvent",
  "AudioContext",
  "AudioNode",
  "AudioDestinationNode",
  "AudioParam",
  "AudioBuffer",
  "AudioBufferSourceNode",
  "AudioScheduledSourceNode",
  "OscillatorNode",
  "OscillatorType",
  "GainNode",
]

[[bin]]
name = "gen-sprites"
path = "src/bin/gen_sprites.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3"
